--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-locomotive-scroll": "^0.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "framer-motion": "^8.4.3",
+    "gsap": "^3.11.4",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
